--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <h3>Software Developer & Data Science Enthusiast</h3>
             </div>
             <div class="pic">
-                <img src="D:\portfolio\assest\sanish.jpg" alt="Profile Picture">
+                <img src="assest/sanish.jpg" alt="Profile Picture">
             </div>
         </div>
     </main>
