--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
                     <p>Published on <span class="blog-date">June 1, 2023</span></p>
                     <p>Artificial Intelligence: Revolutionizing industries, transforming lives, and unlocking endless possibilities for future innovation.</p>
                 </div>
-                <div class="blog-entry">
+<!--                 <div class="blog-entry">
                     <h3>Artificial Intelligence</h3>
                     <p>Published on <span class="blog-date">June 1, 2023</span></p>
                     <p>Artificial Intelligence: Revolutionizing industries, transforming lives, and unlocking endless possibilities for future innovation.</p>
-                </div>
+                </div> -->
             </div>
         </div>
       </blog>
